@@ -1,5 +1,5 @@
 #Properties of this specific CALIPH build
-#Wed, 02 Oct 2013 12:59:17 +0200
+#Mon, 14 Oct 2013 12:23:11 +0200
 #
 # This file is part of the LIRE project: http://www.semanticmetadata.net/lire
 # LIRE is free software; you can redistribute it and/or modify
@@ -44,5 +44,5 @@
 #Properties of this specific CALIPH build
 #Tue, 09 Apr 2013 13:39:22 +0200
 #Wed Sep 07 12:25:27 CEST 2011
-build-date=2013/10/02 12\:59
-build-number=230
+build-date=2013/10/14 12\:23
+build-number=231
